# Health-Analyzer-_Haskell-

./: README.md  health_sample.csv  test2.csv
Haskell Project/health/health-dashboard/:  package.yaml  CHANGELOG.md  health-dashboard.cabal  stack.yaml
Haskell Project/health/health-dashboard/.stack-work/: stack.sqlite3
Haskell Project/health/health-dashboard/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Haskell Project/health/health-dashboard/src/: Main.hs
Haskell Project/health/health-dashboard/static/: index.html  script.js  style.css
