cabal-version:       2.2

name:                health-dashboard
version:             0.1.0.0

homepage:            https://github.com/githubuser/health-dashboard#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable health-dashboard
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:
    base >=4.7 && <5,
    scotty,
    text,
    aeson,
    cassava,
    wai-middleware-static,
    bytestring,
    wai-extra,
    vector,
    wai-middleware-static
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
